<resources>
    <string name="app_name">FundooNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="termsPrivacyAgreement">By signing in you are agreeing to our Terms and Privacy Policy</string>
    <string name="accept_terms_conditions">I accept the Terms and Conditions</string>
    <string name="connect_with">Connect with</string>
    <string name="login_using_fingerprint">Login using Fingerprint</string>
    <string name="fingerprint_login">Fingerprint Login</string>
    <string name="facebookLogin">Facebook Login</string>
    <string name="googleLogin">Google Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="apple_login">Apple Login</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="createLabels">Create/Edit labels</string>
    <string name="archive">Archive</string>
    <string name="bin">Bin</string>
    <string name="drawerButton">Drawer Button</string>
    <string name="search">Search</string>
    <string name="screen_layout_toggle">Screen layout toggle</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="noteEditTitle">Title</string>
    <string name="noteEditDescription">Description</string>
    <string name="add_label">+ Add Label</string>
    <string name="dummyText">Dummy Text</string>
    <string name="noteDescription">Description</string>
    <string name="noteTitle">Title</string>
    <string name="alarm">Alarm</string>
    <string name="profilePicture">Profile picture</string>
    <string name="uploadProfilePicture">Upload profile picture now</string>
    <string name="manageYourFundooAccount">Manage Your Fundoo Account</string>
    <string name="Logout">logout</string>
    <string name="createNewLabel">Create new label</string>
    <string name="add">Add</string>
    <string name="labelName">Label name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="permanentlyDelete">Permanently Delete</string>
    <string name="selectAll">Select All</string>


</resources>