<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionPermanentlyDelete"
        android:icon="@drawable/bin"
        android:title="@string/permanentlyDelete"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/bin"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/archive"
        android:title="@string/archive"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_labels"
        android:icon="@drawable/tag"
        android:title="@string/add_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/select_all"
        android:title="@string/selectAll"
        app:showAsAction="always" />
</menu>