<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbarMain"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <LinearLayout
        android:id="@+id/rightIconsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/layoutToggleIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/screen_layout_toggle"
            android:src="@drawable/plus"
            android:layout_marginEnd="10dp"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/paintpalette"
            android:layout_marginEnd="10dp"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/headerOptions"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/options"
            android:src="@drawable/underline"
            app:tint="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notes"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/headerOptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/options"
        android:padding="8dp"
        android:src="@drawable/ellipsis"
        android:rotation="90"
        app:tint="@color/black" />
</androidx.appcompat.widget.Toolbar>