<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/toolbar"
android:layout_width="match_parent"
android:layout_height="?attr/actionBarSize"
android:background="@color/nav_drawer_selected"
android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

<ImageButton
    android:id="@+id/ivBack"
    android:layout_width="48dp"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="@color/transparent"
    android:contentDescription="@string/drawerButton"
    android:padding="8dp"
    android:src="@drawable/back" />

<LinearLayout
    android:id="@+id/llRightIconsContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:gravity="center_vertical"
    android:layout_marginEnd="16dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivReminder"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile"
        android:src="@drawable/alarm"
        android:layout_marginEnd="7dp"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/ivArchive"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/options"
        android:src="@drawable/archive"
        app:tint="@color/black" />

</LinearLayout>
</androidx.appcompat.widget.Toolbar>