<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@drawable/toolbar_rounded"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="12dp">

        <!-- Drawer Button (Left Side) -->
        <ImageButton
            android:id="@+id/drawer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/drawerButton"
            android:src="@drawable/menu"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_gravity="start" />

        <!-- Title (Centered) -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="25dp"
            android:hint="Search Your Notes here"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionSearch"
            />
        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <!-- Right Side Icons -->
        <LinearLayout
            android:gravity="center_vertical"
            android:id="@+id/rightIconsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search"
                android:src="@drawable/magnifyingglass"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:layout_marginEnd="16dp"
                app:tint="@color/iconsColour" />

            <ImageView
                android:id="@+id/layout_toggle_icon"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/screen_layout_toggle"
                android:src="@drawable/rectangle1x2"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                app:tint="@color/iconsColour" />
            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile"
                android:src="@drawable/person"
                android:gravity="center_vertical"
                android:layout_marginEnd="1dp"
                app:tint="@color/iconsColour" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>